--- a/.github/workflows/decrypt-deploy.yml
+++ b/.github/workflows/decrypt-deploy.yml
@@ -100,6 +100,10 @@ jobs:
           set -o allexport
           source .env.production || true
           set +o allexport
+
+          # ensure devDependencies (typescript) are installed for next.config.ts
+          NPM_CONFIG_PRODUCTION=false npm ci
+
           npm ci
           npm run build
 
