--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.19.2",
 		"next": "15.5.4",
 		"react": "19.1.0",
